hphp/test/slow/hhbbc/nullsafe_nullbase.php.expectf
Fatal error: `?->` operator is not allowed in write context in %s/nullsafe_nullbase.php on line 11
